--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "copy-webpack-plugin": "4.3.1",
     "css-loader": "0.28.9",
     "extract-text-webpack-plugin": "3.0.2",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "4.7.2",
     "sass-loader": "6.0.6",
